--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Page title -->
+  <title>FC 26 Random Match Generator – Custom Matches, Real Scenarios & Historic Games</title>
+
+  <!-- Description for search engines -->
+  <meta name="description" content="Generate random FC 26 matches with custom team strengths, real match scenarios, or historic memorable games. Try your favorite teams now!">
+
+  <!-- SEO keywords (optional) -->
+  <meta name="keywords" content="FC 26, football, soccer, match generator, random match, historical matches, real scenarios, team strength, game simulator">
+
+  <!-- Make site indexable -->
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph for sharing -->
+  <meta property="og:title" content="FC 26 Random Match Generator">
+  <meta property="og:description" content="Generate random FC 26 matches with custom settings or historic matches.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://wesamowaidi03.github.io/Fc26-random-match-generator/">
+  <meta property="og:image" content="https://wesamowaidi03.github.io/Fc26-random-match-generator/preview.png">
+</head>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1839,3 +1863,4 @@
 
 </body>
 </html>
+
