--- a/index.html
+++ b/index.html
@@ -814,6 +814,17 @@
         {n:"Málaga", s:2.5, l:"LaLiga 2", t:"men_club"},
         {n:"Castellón", s:2.5, l:"LaLiga 2", t:"men_club"},
         {n:"Deportivo La Coruña", s:2.5, l:"LaLiga 2", t:"men_club"},
+        // --- Others (Classic Teams) ---
+        {n:"Real Madrid Classic", s:5, l:"Classic Teams", t:"men_club"},
+        {n:"Chelsea Classic", s:5, l:"Classic Teams", t:"men_club"},
+        {n:"Liverpool Classic", s:5, l:"Classic Teams", t:"men_club"},
+        {n:"Bayren Munich Classic", s:5, l:"Classic Teams", t:"men_club"},
+        {n:"Bundesliga Classic", s:5, l:"Classic Teams", t:"men_club"},
+        {n:"LaLiga Classic", s:5, l:"Classic Teams", t:"men_club"},
+        {n:"Seria A Madrid Classic", s:5, l:"Classic Teams", t:"men_club"},
+        {n:"Premier League Classic", s:5, l:"Classic Teams", t:"men_club"},
+        
+
 
         // --- GERMANY (Bundesliga) ---
         {n:"Bayern Munich", s:5, l:"Bundesliga", t:"men_club"},
@@ -1790,5 +1801,6 @@
 
 </body>
 </html>
+
 
 
