--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
         { t1: "Italy", t2: "Germany", label: "🌍 1970 World Cup Semi (4-3)" },
         { t1: "England", t2: "Germany", label: "🌍 1966 World Cup Final (4-2)" },
         { t1: "France", t2: "Portugal", label: "🇪🇺 1984 Euro Semi (3-2)" },
-        { t1: "Liverpool", t2: "Newcastle United", label:  1996 PL Classic (4-3)" },
+        { t1: "Liverpool", t2: "Newcastle United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 1996 PL Classic (4-3)" },
         { t1: "Liverpool", t2: "Deportivo Alaves", label: "🏆 2001 UEFA Cup Final (5-4)" },
         { t1: "Germany", t2: "England", label: "🌍 2000 Friendly (1-5)" },
         { t1: "Romania", t2: "Argentina", label: "🌍 1994 World Cup (3-2)" },
@@ -713,43 +713,43 @@
         { t1: "England", t2: "Scotland", label: "⚔️ 1967 Home Champ (2-3)" },
         { t1: "Tottenham Hotspur", t2: "Arsenal", label: "🔥 2004 NLD (4-5)" },
         { t1: "Arsenal", t2: "Manchester United", label: "🏆 1999 FA Cup Semi (3-2)" },
-        { t1: "Newcastle United", t2: "Manchester United", label:  1996 PL Classic (5-0)" },
+        { t1: "Newcastle United", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 1996 PL Classic (5-0)" },
         { t1: "Celtic", t2: "Rangers", label: "🔥 1957 Derby (7-1)" },
         { t1: "Chelsea", t2: "Barcelona", label: "👑 2005 UCL Last 16 (1-1)" },
         { t1: "Liverpool", t2: "West Ham United", label: "🏆 2006 FA Cup Final (3-3)" },
         { t1: "Manchester United", t2: "Manchester City", label: "🔥 2009 Derby (4-3)" },
-        { t1: "Liverpool", t2: "Arsenal", label:  2001 PL Classic (4-4)" },
+        { t1: "Liverpool", t2: "Arsenal", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2001 PL Classic (4-4)" },
         { t1: "Chelsea", t2: "Barcelona", label: "👑 2005 UCL Last 16 (4-2)" },
         { t1: "Manchester United", t2: "Barcelona", label: "🏆 1991 CWC Final (3-0)" },
-        { t1: "Arsenal", t2: "Manchester United", label:  2001 PL Classic (2-6)" },
+        { t1: "Arsenal", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2001 PL Classic (2-6)" },
         { t1: "Borussia Monchengladbach", t2: "Borussia Dortmund", label: "🇩🇪 1978 Record (12-0)" },
-        { t1: "Portsmouth", t2: "Reading", label:  2007 PL Classic (7-4)" },
+        { t1: "Portsmouth", t2: "Reading", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2007 PL Classic (7-4)" },
         { t1: "Olympiacos", t2: "Liverpool", label: "👑 2004 UCL Last 16 (1-3)" },
         { t1: "Manchester City", t2: "Manchester United", label: "🔥 2011 Derby (6-1)" },
-        { t1: "Liverpool", t2: "Manchester United", label:  2022 PL Classic (7-0)" },
-        { t1: "Liverpool", t2: "Manchester City", label:  2018 PL Classic (4-3)" },
+        { t1: "Liverpool", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2022 PL Classic (7-0)" },
+        { t1: "Liverpool", t2: "Manchester City", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2018 PL Classic (4-3)" },
         { t1: "England", t2: "Netherlands", label: "🇪🇺 1996 Euro (4-1)" },
         { t1: "Germany", t2: "Italy", label: "🌍 2006 World Cup Semi (0-2)" },
-        { t1: "Liverpool", t2: "Manchester United", label:  1994 PL Classic (3-3)" },
+        { t1: "Liverpool", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 1994 PL Classic (3-3)" },
         { t1: "Netherlands", t2: "Czechia", label: "🇪🇺 2004 Euro (2-3)" },
         { t1: "Everton", t2: "Liverpool", label: "🔥 2001 Derby (4-4)" },
         { t1: "VfL Bochum", t2: "Bayern Munich", label: "🇩🇪 2003 Classic (5-6)" },
         { t1: "Olympique Marseille", t2: "Montpellier", label: "🇫🇷 1991 Ligue 1 (5-4)" },
         { t1: "USA", t2: "England", label: "🌍 1950 World Cup (1-0)" },
-        { t1: "Tottenham Hotspur", t2: "Manchester United", label:  1999 PL Classic (3-5)" },
+        { t1: "Tottenham Hotspur", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 1999 PL Classic (3-5)" },
         { t1: "England", t2: "Hungary", label: "⚔️ 1953 Friendly (3-6)" },
-        { t1: "Arsenal", t2: "Liverpool", label:  1989 Decider (0-2)" },
-        { t1: "Arsenal", t2: "Manchester United", label:  2002 PL Classic (1-2)" },
-        { t1: "Coventry City", t2: "Tottenham Hotspur", label:  1997 PL Classic (3-2)" },
-        { t1: "Liverpool", t2: "Crystal Palace", label:  2014 PL Classic (3-4)" },
-        { t1: "Manchester United", t2: "West Bromwich Albion", label:  2013 PL Classic (3-5)" },
-        { t1: "Everton", t2: "Wimbledon", label:  1994 Survival (3-2)" },
+        { t1: "Arsenal", t2: "Liverpool", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 1989 Decider (0-2)" },
+        { t1: "Arsenal", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2002 PL Classic (1-2)" },
+        { t1: "Coventry City", t2: "Tottenham Hotspur", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 1997 PL Classic (3-2)" },
+        { t1: "Liverpool", t2: "Crystal Palace", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2014 PL Classic (3-4)" },
+        { t1: "Manchester United", t2: "West Bromwich Albion", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2013 PL Classic (3-5)" },
+        { t1: "Everton", t2: "Wimbledon", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 1994 Survival (3-2)" },
         { t1: "Middlesbrough", t2: "Chesterfield", label: "🏆 1997 FA Cup (3-3)" },
         { t1: "AC Milan", t2: "Liverpool", label: "👑 2007 UCL Final (2-1)" },
         { t1: "Manchester United", t2: "Chelsea", label: "👑 2008 UCL Final (1-1)" },
         { t1: "Inter Milan", t2: "Bayern Munich", label: "👑 2010 UCL Final (2-0)" },
         { t1: "Chelsea", t2: "Manchester United", label: "🏆 2018 FA Cup Final (1-0)" },
-        { t1: "Arsenal", t2: "Manchester United", label:  2005 PL Classic (3-2)" },
+        { t1: "Arsenal", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2005 PL Classic (3-2)" },
         { t1: "Liverpool", t2: "Manchester City", label: "🏆 2022 Community Shield (3-1)" },
         { t1: "Bayern Munich", t2: "Borussia Dortmund", label: "🇩🇪 2012 Classic (3-2)" },
         { t1: "Borussia Dortmund", t2: "Bayern Munich", label: "🇩🇪 2019 Classic (3-1)" },
@@ -773,10 +773,10 @@
         { t1: "Germany", t2: "England", label: "🌍 2010 World Cup (4-1)" },
         { t1: "France", t2: "Italy", label: "🇪🇺 2000 Euro Final (2-1)" },
         { t1: "Argentina", t2: "Croatia", label: "🌍 2022 World Cup (3-0)" },
-        { t1: "Manchester City", t2: "Arsenal", label:  2023 Title Race (3-1)" },
+        { t1: "Manchester City", t2: "Arsenal", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2023 Title Race (3-1)" },
         { t1: "Tottenham Hotspur", t2: "Arsenal", label: "🔥 2008 NLD (4-4)" },
-        { t1: "Chelsea", t2: "Manchester United", label:  1998 PL Match (5-3)" },
-        { t1: "Liverpool", t2: "Tottenham Hotspur", label:  2000 PL Match (6-3)" },
+        { t1: "Chelsea", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 1998 PL Match (5-3)" },
+        { t1: "Liverpool", t2: "Tottenham Hotspur", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2000 PL Match (6-3)" },
         { t1: "Barcelona", t2: "Atletico Madrid", label: "🇪🇸 2015 La Liga (4-0)" },
         { t1: "Borussia Dortmund", t2: "Bayern Munich", label: "🏆 2012 Pokal Final (5-2)" },
         { t1: "AC Milan", t2: "Juventus", label: "🇮🇹 1996 Serie A (4-2)" },
@@ -786,7 +786,7 @@
         { t1: "Manchester United", t2: "Roma", label: "👑 2007 UCL Quarter (7-1)" },
         { t1: "Liverpool", t2: "Roma", label: "👑 2018 UCL Semi (5-2)" },
         { t1: "Ajax", t2: "Tottenham Hotspur", label: "👑 2019 UCL Semi (2-3)" },
-        { t1: "Chelsea", t2: "Liverpool", label:  2014 PL Classic (0-2)" },
+        { t1: "Chelsea", t2: "Liverpool", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2014 PL Classic (0-2)" },
         { t1: "Manchester City", t2: "Tottenham Hotspur", label: "👑 2019 UCL Quarter (4-3)" },
         { t1: "Arsenal", t2: "Tottenham Hotspur", label: "🔥 2012 NLD (5-2)" },
         { t1: "Juventus", t2: "AC Milan", label: "🇮🇹 2012 Serie A (3-1)" },
@@ -830,18 +830,18 @@
         { t1: "Inter Milan", t2: "Juventus", label: "🇮🇹 2023 Derby d'Italia (1-0)" },
         { t1: "Atletico Madrid", t2: "Barcelona", label: "🇪🇸 2014 Title Decider (1-1)" },
         { t1: "Borussia Dortmund", t2: "Bayern Munich", label: "🇩🇪 2018 Classic (3-2)" },
-        { t1: "Chelsea", t2: "Manchester City", label:  2019 League Cup (0-0)" },
-        { t1: "Liverpool", t2: "Arsenal", label:  2014 PL Classic (5-1)" },
-        { t1: "Manchester United", t2: "Liverpool", label:  2009 PL Classic (1-4)" },
-        { t1: "Tottenham Hotspur", t2: "Manchester United", label:  2020 PL Classic (1-6)" },
-        { t1: "Arsenal", t2: "Chelsea", label:  2004 Invincibles (2-1)" },
+        { t1: "Chelsea", t2: "Manchester City", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2019 League Cup (0-0)" },
+        { t1: "Liverpool", t2: "Arsenal", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2014 PL Classic (5-1)" },
+        { t1: "Manchester United", t2: "Liverpool", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2009 PL Classic (1-4)" },
+        { t1: "Tottenham Hotspur", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2020 PL Classic (1-6)" },
+        { t1: "Arsenal", t2: "Chelsea", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2004 Invincibles (2-1)" },
         { t1: "Portugal", t2: "France", label: "🇪🇺 2016 Euro Final (1-0)" },
-        { t1: "Liverpool", t2: "Manchester United", label:  2020 PL Classic (2-0)" },
+        { t1: "Liverpool", t2: "Manchester United", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2020 PL Classic (2-0)" },
         { t1: "Manchester City", t2: "Liverpool", label: "🏆 2022 FA Cup Semi (2-3)" },
         { t1: "Atletico Madrid", t2: "Juventus", label: "👑 2019 UCL Last 16 (2-0)" },
         { t1: "Borussia Dortmund", t2: "Paris Saint-Germain", label: "👑 2020 UCL Last 16 (2-1)" },
         { t1: "Napoli", t2: "Barcelona", label: "👑 2020 UCL Last 16 (1-1)" },
-        { t1: "Leicester City", t2: "Manchester City", label:  2020 PL Classic (5-2)" },
+        { t1: "Leicester City", t2: "Manchester City", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2020 PL Classic (5-2)" },
         { t1: "Arsenal", t2: "Tottenham Hotspur", label: "🔥 2023 NLD (2-2)" },
         { t1: "AC Milan", t2: "Liverpool", label: "👑 2005 Group (3-3)" },
         { t1: "Tottenham Hotspur", t2: "Arsenal", label: "🔥 2010 NLD (2-1)" },
@@ -856,7 +856,7 @@
         { t1: "Colombia", t2: "Romania", label: "🌍 1994 World Cup (0-2)" },
         { t1: "England", t2: "Italy", label: "🇪🇺 2021 Euro Final (1-1)" },
         { t1: "Liverpool", t2: "Arsenal", label: "👑 2008 UCL Quarter (4-2)" },
-        { t1: "Manchester City", t2: "Tottenham Hotspur", label:  2017 PL Match (4-1)" },
+        { t1: "Manchester City", t2: "Tottenham Hotspur", label: "🏴󠁧󠁢󠁥󠁮󠁧󠁿 2017 PL Match (4-1)" },
         { t1: "Borussia Dortmund", t2: "Bayern Munich", label: "🇩🇪 2013 Supercup (4-2)" },
         { t1: "AC Milan", t2: "Inter Milan", label: "🔥 2003 UCL Semi (1-1)" },
         { t1: "PSG", t2: "Lyon", label: "🇫🇷 2019 Ligue 1 (4-2)" },
